# Surge-POS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  semgrep.yml  surge-ci.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: cashier-setup.md  configuration.md  getting-started.md  installation.md  item-catalog.md  keyboard-shortcuts.md  making-a-sale.md  manager-approvals.md  payments.md  pos-profile.md  reports.md  returns-voids.md  session-security.md  shift-management.md  troubleshooting.md
docs/src/pages/: index.tsx
scripts/: generate_tests.py
surge/: hooks.py  modules.txt  patches.txt
surge/api/: auth.py  customers.py  dashboard.py  invoices.py  items.py  session.py  stock.py  sync.py
surge/data_migration/: generate_csvs.py  generate_supplier_csvs.py  import_items.py  import_suppliers.py
surge/jobs/: queue.py  sync_engine.py
surge/overrides/: pos_invoice.py  sales_invoice.py
surge/patches/v1_0/: create_pos_custom_fields.py
surge/public/: manifest.json
surge/public/js/: login_inject.js
surge/setup/: custom_fields.py  install.py  uninstall.py
surge/surge_pos/: module_def.json
surge/surge_pos/doctype/pos_security_audit_log/: pos_security_audit_log.json  pos_security_audit_log.py
surge/tests/: conftest.py
surge/tests/integration/: _base.py  conftest.py  test_auth.py  test_invoices.py  test_permissions.py  test_security.py  test_session.py  test_zreport.py
surge/tests/unit/: conftest.py  test_dashboard_stats.py  test_dashboard_widgets.py  test_hmac_token.py  test_pin_crypto.py  test_zreport_math.py
surge/utils/: __init__.py  auth.py  cache.py  cache_hooks.py  db.py  json.py  permissions.py  pin_hooks.py  tombstone.py
surge/www/: surge-login.py  surge.html  surge.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
web/e2e/: idlelock.spec.ts  playwright.config.ts  sellscreen.spec.ts  shiftclose.spec.ts  shiftopen.spec.ts
web/e2e/support/: auth.ts
web/scripts/: post-build.mjs
web/src/: index.css  main.tsx
web/src/components/: AppShell.tsx  ErrorBoundary.tsx
web/src/components/dashboard/: CustomerOverview.tsx  (+8 more)
web/src/hooks/: useIdleLock.ts  useInvoice.ts  useItems.ts  useSession.ts  useSyncQueue.ts  useWidgetsData.ts
web/src/lib/: api.ts  offline-queue.ts  realtime.ts  session.ts  utils.ts
web/src/pages/: CashierScreen.tsx  DashboardScreen.tsx  HomeSelector.tsx  LoginScreen.tsx  ProfileSelector.tsx  SellScreen.tsx  ShiftClose.tsx  ShiftOpen.tsx
web/src/stores/: cart.ts
web/src/types/: pos.ts
(+28 files in other folders)
