[project]
name = "surge"
authors = [
    { name = "Ujjwal Aggrawal", email = "ujjmee2279@gmail.com"}
]
description = "High performance POS for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "msgspec>=0.18.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["surge/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: pure Python tests, no Frappe/DB required",
    "integration: requires a live Frappe site and MariaDB",
    "e2e: end-to-end browser tests via Playwright",
]

[tool.coverage.run]
source = ["surge/api", "surge/utils", "surge/overrides", "surge/jobs"]
omit = ["surge/tests/*", "surge/setup/*", "**/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.hypothesis]
max_examples = 100
deriving = true
suppress_health_check = ["too_slow"]

# Test dependencies (pip install in CI via workflow step)
# pytest>=8.0.0, hypothesis>=6.100.0, pytest-cov>=5.0.0
